--- a/Lab00_ProgrammingEnvironment.ipynb
+++ b/Lab00_ProgrammingEnvironment.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lmu-cmsi1010-fall2021/lab-notebook-originals/blob/main/Lab00_ProgrammingEnvironment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MartelBeast/lab-notebook-originals/blob/main/Lab00_ProgrammingEnvironment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -83,7 +83,9 @@
         "You can write comments on multiple lines by placing the text between the lines of quotation marks\n",
         "This cell does nothing now until you write some code below...\n",
         "\"\"\"\n",
-        "\n"
+        "\n",
+        "print(Hello World!!!)\n",
+        "#say hello back\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -108,7 +110,41 @@
         "id": "uik2FUei__qM"
       },
       "source": [
-        "Now it's your turn to change this notebook. Below this cell, add a text cell by clicking on the '+Text' button at the top of this notebook. You can add whatever text you would like. Then below that cell, add a cell of code by clicking the '+Code' button at the top of this notebook. Write code to print your name in that cell and run the code."
+        "# Now it's your turn to change this notebook. Below this cell, add a text cell by clicking on the '+Text' button at the top of this notebook. You can add whatever text you would like. Then below that cell, add a cell of code by clicking the '+Code' button at the top of this notebook. Write code to print your name in that cell and run the code.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h-wuYbXANwFa"
+      },
+      "source": [
+        "Hello\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zF-7Gz5aN1da",
+        "outputId": "be679fe2-79dc-4333-839b-878992f647ca"
+      },
+      "source": [
+        "print('Matt Martel')  \n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matt Martel\n"
+          ]
+        }
       ]
     },
     {
@@ -139,6 +175,17 @@
         "\n",
         "Now type the **ls** command and you should see a copy of this notebook in that directory."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mq2mPv6-fMcJ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -179,6 +226,17 @@
         "1. What do you feel more confident about after completing this lab?\n",
         "2. What do you feel you can use more help with after completing this lab?\n",
         "3. Do you have any constructive suggestions on how we can help you or improve this lab?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0ODnVPsqfPLX"
+      },
+      "source": [
+        "1.How to add code and a text cell to the lab.\n",
+        "2.Everyhting. I am still confused on lots of parts of this lab.\n",
+        "3.A one on one meeting with the professor helping me get set up is what is needed."
       ]
     },
     {
