--- a/Lab00_ProgrammingEnvironment.ipynb
+++ b/Lab00_ProgrammingEnvironment.ipynb
@@ -84,7 +84,7 @@
         "This cell does nothing now until you write some code below...\n",
         "\"\"\"\n",
         "\n",
-        "print(Hello World!!!)\n",
+        "print(Hello World)\n",
         "#say hello back\n"
       ],
       "execution_count": null,
@@ -179,13 +179,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mq2mPv6-fMcJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mq2mPv6-fMcJ",
+        "outputId": "37633fb2-e8f5-4d18-ae1b-6055e8ba55d7"
       },
       "source": [
-        ""
+        "IsADirectoryError"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "IsADirectoryError"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
