--- a/Lab01_TakingOrders.ipynb
+++ b/Lab01_TakingOrders.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": "Lab01_TakingOrders.ipynb",
+      "name": "Copy of Lab01_TakingOrders.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -54,23 +54,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BvyaiHRdlsXj"
+        "id": "BvyaiHRdlsXj",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "cf96db43-5ab9-43ae-8476-7b9fc26423e8"
       },
       "source": [
         "# Greet your customer and ask for their name\n",
-        "\n",
-        "# Save their name in a variable\n"
+        "print(\"hello customer, what's your name?\")\n",
+        "# Save their name in a variable\n",
+        "customer_name = \"Matt\"\n",
+        "customer_name "
       ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_LJK8N03jhTL"
-      },
-      "source": [
-        "Greetings, what are your names?"
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello customer, what's your name?\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Matt'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
       ]
     },
     {
